# Metanoia-Vynsight

./: Cargo.toml  README.md
src/: common.rs  crawl.rs  db.rs  error.rs  main.rs  scrape.rs  spider.rs  spider_sup.rs  web.rs
src/pub/: config.json  targets.json
src/scripts/: parse.exs
