[package]
name = "metanoia_vynsight"
version = "0.1.0"
author = "Matthew.McDade13"
description = "CLI Web Crawler and Analyzer for Metanoia Cybersecurity toolkit."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lmdb = "0.8.0"
openssl = { version = "0.10", features = ["vendored"] }
tokio = { version = "1.27.0", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
actix = "0.13.0"
hyper-tls = "0.5.0"
futures-util = "0.3.28"
ciborium = "0.2.0"
serde = { version = "1.0.160", features = ["derive"] }
clap = { version = "4.2.5", features = ["cargo"] }
scraper = "0.16.0"
serde_json = "1.0.96"

