[package]
name = "metanoia_vynsight"
version = "0.1.0"
author = "Matthew.McDade13"
description = "CLI Web Crawler and Analyzer for Metanoia Cybersecurity toolkit."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lmdb = "0.8.0"
ciborium = "0.2.0"
serde = { version = "1.0.160", features = ["derive"] }
clap = { version = "4.2.5", features = ["cargo"] }
scraper = "0.16.0"
serde_json = "1.0.96"
anyhow = "1.0.79"
reqwest = "0.11.23"
tokio = { version = "1.35.1", features = ["fs"] }
sqlx = "0.7.3"

